<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/sudokuBackground">

        <Button
            android:id="@+id/digit1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit4"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit5"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit7"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit6"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit8"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit7"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/digit9"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/digit8"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>