<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#36594A"
    tools:context=".view.game.activity.SudokuActivity">

    <Button
        android:id="@+id/check_puzzle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_puzzle_text"
        app:layout_constraintBottom_toTopOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/generate_puzzle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_puzzle_button"
        app:layout_constraintBottom_toTopOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sudoku_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/digit1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.1"/>

    <Button
        android:id="@+id/digit2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.2"/>

    <Button
        android:id="@+id/digit3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.3"/>

    <Button
        android:id="@+id/digit4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.4"/>

    <Button
        android:id="@+id/digit5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/digit6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.6"/>

    <Button
        android:id="@+id/digit7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.7"/>

    <Button
        android:id="@+id/digit8"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.8"/>

    <Button
        android:id="@+id/digit9"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/digit_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sudoku_recycler_view"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.9"/>
</androidx.constraintlayout.widget.ConstraintLayout>