<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="200dp"
        android:layout_height="135dp"
        android:background="@color/sudokuBackground">

        <Button
            android:id="@+id/digit1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_1"
            app:layout_constraintBottom_toTopOf="@id/digit4"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/digit2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_2"
            app:layout_constraintBottom_toTopOf="@id/digit5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/digit3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_3"
            app:layout_constraintBottom_toTopOf="@id/digit6"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/digit4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_4"
            app:layout_constraintBottom_toTopOf="@id/digit7"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/digit5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_5"
            app:layout_constraintBottom_toTopOf="@id/digit8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/digit6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_6"
            app:layout_constraintBottom_toTopOf="@id/digit9"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/digit7"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_7"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.75" />

        <Button
            android:id="@+id/digit8"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_8"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.75" />

        <Button
            android:id="@+id/digit9"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:text="@string/digit_9"
            app:layout_constraintBottom_toBottomOf="@id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
            app:layout_constraintRight_toRightOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>